# ragas-notes

./: .gitignore  Query-response-eval.ipynb  pyproject.toml
llamaindex/: dataloaders.ipynb
pyTDD/part1/: test_ch1.py
rag-playground/: playground.ipynb
rag-playground/src/: __init__.py  main.py
ragas-demo/: YC demo.ipynb  semantic_testdata.csv  test_to_debug.csv
ragas-demo/openai/: docstore.json  index_store.json
test-set-generation/: evolgen.py  playground.ipynb  prompts.py
