[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.7.9",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "openai>=1.70.0",
    "pip>=25.0.1",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
]
